2002-04-20  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.17.4.

	* twisted/internet/tcp.py: Make unix domain sockets *really*
	world-accessible, rather than just accessible by "other".

2002-04-19  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twisted/web/{server,twcgi}.py: Fixed POST bug in distributed
	web servers.
	
2002-04-19  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.17.3.

2002-04-19  Glyph Lefkowitz  <carmstro@twistedmatrix.com>

	* twisted/web/distrib.py: Fix a bug where static.File transfers
	over a distributed-web connection would not finish up properly.

2002-04-18  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.17.2.

2002-04-18  Chris Armstrong  <carmstro@twistedmatrix.com>

	* twisted/news: A news server and NNTP protocol support courtesy of
	exarkun. Another step towards Twisted implementations of EVERYTHING
	IN THE WORLD!

2002-04-17  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/spread/pb.py: Errors during jelly serialization used to
	just blow up; now they more properly return a Deferred Failure. This
	will make hangs in PB apps (most notably distributed web) less common.

2002-04-17  Donovan Preston <dp@twistedmatrix.com>

	* Major changes to the capabilities of the static web server, in an 
	attempt to be able to use Twisted instead of Zope at work; my plan is to 
	capture many of the conveniences of Zope without the implicitness and 
	complexity that comes with working around implicit behavior when it fails.

	1) .trp and .rpy support in the static web server:
	Very simple handlers to allow you to easily add Resource objects 
		dynamically to a running server, by merely changing files on the 
		filesystem.
	An .rpy file will be executed, and if a "resource" variable exists upon the
		execution's completion, it will be returned. 
	A .trp file (twisted resource pickle) will be unpickled and returned. An