@@ -42,7 +42,7 @@ class Service:
     (See Also: twisted.spread.pb.Service)
     """
     
-    __implements__ = [IService]
+    __implements__ = IService
     
     # ugh, load order
     perspectiveClass = Perspective
